Add Java 16 and build only against currently supported versions of Java