@@ -9,6 +9,7 @@ dependencies {
 
 gretty {
   springBoot = true
+  if (JavaVersion.current().isJava9Compatible()) jvmArgs  "--add-opens", "java.base/java.lang=ALL-UNNAMED"
 }
 
 defineIntegrationTest()
